--- a/restart/so_long_from_scratch/Makefile
+++ b/restart/so_long_from_scratch/Makefile
@@ -1,28 +1,39 @@
-#------Variaveis------#
+# ------Variaveis------
 
 NAME = so_long
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
 
-SRC = srcs/main.c
+LIBFT_DIR = ../libft
+INC_DIR = includes
+
+SRC = srcs/main.c \
+		srcs/map_parser.c
 OBJ = $(SRC:.c=.o)
 
-all: $(NAME)
+# REGRA CORRIGIDA: all depende de libft primeiro!
+all: libft $(NAME)
 
 $(NAME): $(OBJ)
-		@echo "🖋️Linkando $(NAME)..."
-		$(CC) $(CFLAGS) $(OBJ) -o $(NAME)
+	@echo "🖋️Linkando $(NAME)..."
+	$(CC) $(CFLAGS) $(OBJ) -L$(LIBFT_DIR) -lft -o $(NAME)
 
 %.o: %.c
-		@echo "🚧 Compilando $<...."
-		$(CC) $(CFLAGS) -I includes -c $< -o $@
+	@echo "🚧 Compilando $<...."
+	$(CC) $(CFLAGS) -I$(INC_DIR) -I$(LIBFT_DIR) -c $< -o $@
+
+libft:
+	@echo "🥌Compilando libft"
+	$(MAKE) -C $(LIBFT_DIR)
 
 clean:
-		rm -f $(OBJ)
+	rm -f $(OBJ)
+	$(MAKE) -C $(LIBFT_DIR) clean
 
 fclean: clean
-		rm -f $(NAME)
+	rm -f $(NAME)
+	$(MAKE) -C $(LIBFT_DIR) fclean
 
 re: fclean all
 
-.PHONY: all clean fclean re
+.PHONY: all clean fclean re libft
