--- a/restart/so_long_from_scratch/Makefile
+++ b/restart/so_long_from_scratch/Makefile
@@ -1,5 +1,4 @@
 # ------Variaveis------
-
 NAME = so_long
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
@@ -9,6 +8,7 @@ FT_PRINTF_DIR = ../ft_printf
 MLX_DIR = ../minilibx
 INC_DIR = includes
 
+# Arquivos da versão obrigatória
 SRC = 	srcs/parser/map_main.c \
 		srcs/parser/map_parser.c \
 		srcs/parser/map_struct.c \
@@ -18,35 +18,56 @@ SRC = 	srcs/parser/map_main.c \
 		srcs/validation/validate_chars.c \
 		srcs/validation/validate_entities.c \
 		srcs/validation/find_positions.c \
-		srcs/validation/validate_path.c  \
+		srcs/validation/validate_path.c \
 		srcs/graphics/init_graphics.c \
 		srcs/graphics/load_textures.c \
 		srcs/graphics/render_map.c \
-		srcs/graphics/enemy_animation.c \
 		srcs/graphics/animate.c \
-		srcs/graphics/hud_display.c \
 		srcs/gameplay/cleanup_textures.c \
 		srcs/gameplay/cleanup_game.c \
 		srcs/gameplay/cleanup_close.c \
 		srcs/gameplay/gameplay_moves.c \
-		srcs/gameplay/gameplay_keys.c \
-		srcs/gameplay/enemies_movement.c \
-		srcs/gameplay/enemies_init.c \
-		srcs/gameplay/enemies_main.c \
-		srcs/gameplay/enemies_collision.c
+		srcs/gameplay/gameplay_keys.c
+
+# Arquivos bonus adicionais
+BONUS_SRC = srcs/bonus/map_main_bonus.c \
+			srcs/bonus/map_struct_bonus.c \
+			srcs/bonus/validate_entities_bonus.c \
+			srcs/bonus/cleanup_game_bonus.c \
+			srcs/bonus/enemy_animation_bonus.c \
+			srcs/bonus/hud_display_bonus.c \
+			srcs/bonus/animate_bonus.c \
+			srcs/bonus/load_textures_bonus.c \
+			srcs/bonus/cleanup_textures_bonus.c \
+			srcs/bonus/gameplay_moves_bonus.c \
+			srcs/bonus/enemies_movement_bonus.c \
+			srcs/bonus/enemies_init_bonus.c \
+			srcs/bonus/enemies_main_bonus.c \
+			srcs/bonus/enemies_collision_bonus.c
+
+# Arquivos base + bonus para compilação bonus
+SRC_BONUS = $(filter-out srcs/parser/map_main.c srcs/parser/map_struct.c \
+					srcs/validation/validate_entities.c srcs/gameplay/cleanup_game.c \
+					srcs/graphics/animate.c srcs/graphics/load_textures.c \
+					srcs/gameplay/cleanup_textures.c srcs/gameplay/gameplay_moves.c, $(SRC)) \
+			$(BONUS_SRC)
 
 OBJ = $(SRC:.c=.o)
-
+OBJ_BONUS = $(SRC_BONUS:.c=.o)
 
 all: libs $(NAME)
 
 $(NAME): $(OBJ)
-	@echo "🖋️Linkando $(NAME)..."
+	@echo "🖋️Linkando $(NAME) (versão mandatory)..."
 	$(CC) $(CFLAGS) $(OBJ) -L$(LIBFT_DIR) -lft -L$(FT_PRINTF_DIR) -lftprintf -L$(MLX_DIR) -lmlx -lXext -lX11 -lm -o $(NAME)
+
+bonus: libs $(OBJ_BONUS)
+	@echo "🖋️Linkando $(NAME) (versão bonus)..."
+	$(CC) $(CFLAGS) $(OBJ_BONUS) -L$(LIBFT_DIR) -lft -L$(FT_PRINTF_DIR) -lftprintf -L$(MLX_DIR) -lmlx -lXext -lX11 -lm -o $(NAME)
 
 %.o: %.c
 	@echo "🚧 Compilando $<...."
-	$(CC) $(CFLAGS) -I$(INC_DIR) -I$(LIBFT_DIR) -I$(FT_PRINTF_DIR)/includes -I$(MLX_DIR)  -c $< -o $@
+	$(CC) $(CFLAGS) -I$(INC_DIR) -I$(LIBFT_DIR) -I$(FT_PRINTF_DIR)/includes -I$(MLX_DIR) -c $< -o $@
 
 libs:
 	@echo "🥌  Compilando libft"
@@ -55,8 +76,9 @@ libs:
 	$(MAKE) -C $(FT_PRINTF_DIR) --no-print-directory
 	@echo "🦜  Compilando MiniLibX..."
 	$(MAKE) -C $(MLX_DIR) --no-print-directory
+
 clean:
-	rm -f $(OBJ)
+	rm -f $(OBJ) $(OBJ_BONUS)
 	$(MAKE) -C $(LIBFT_DIR) clean
 	$(MAKE) -C $(FT_PRINTF_DIR) clean
 	$(MAKE) -C $(MLX_DIR) clean
@@ -70,11 +92,11 @@ re: fclean all
 
 show-marge:
 	@if [ -f "marge2.txt" ]; then \
-		echo "\n$(BLUE)📄 Marge está Krumplin! 💃:$(RESET)"; \
+		echo "\n📄 Marge está Krumplin! 💃:"; \
 		cat marge2.txt; \
 		echo ""; \
 	else \
-		echo "\n$(RED)❌ marge2.txt não encontrada!$(RESET)"; \
+		echo "\n❌ marge2.txt não encontrada!"; \
 	fi
 
-.PHONY: all clean fclean re libft
+.PHONY: all bonus clean fclean re libs show-marge
