--- a/so_long_from_scratch/Makefile
+++ b/so_long_from_scratch/Makefile
@@ -1,6 +1,6 @@
 # ------Variaveis------
 NAME = so_long
-NAME_BONUS = so_long
+NAME_BONUS = so_long_bonus
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
 
